arrow element and nav fix they were overlapping

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -15,7 +15,9 @@
 
 .nav {
   position: absolute;
-  inset-inline: rem(5);
+  inset-inline: rem(25);
+
+  z-index: 2;
 
   display: none;
   flex-direction: column;
